--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -61,3 +61,4 @@ kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", versio
 android-library = { id = "com.android.library", version.ref = "agp" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
