--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,9 +26,11 @@ androidx-compose-runtime = "1.6.8"
 kotlinx-immutable = "0.3.7"
 nav-version = "2.8.0"
 hilt-nav-compose = "1.2.0"
-junit-version-common = "5.11.0"
 mockito-core = "5.13.0"
 mockito-kotlin = "5.4.0"
+junitKtx = "1.2.1"
+kotlinxCoroutinesTest = "1.9.0-RC.2"
+coreTesting = "2.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -69,9 +71,12 @@ androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime
 kotlinx-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx-immutable"}
 retrofit-responseTypeKeeper = { module = "com.squareup.retrofit2:response-type-keeper", version.ref = "retrofit" }
 nav-version = { module = "androidx.navigation:navigation-compose", version.ref = "nav-version" }
-junit-version = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-version-common" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito-core" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
